# GraphEvaluation

./: AtomicGraph.cpp  AtomicGraph.hpp  CMakeLists.txt  Graph.cpp  Graph.hpp  GraphMutex.cpp  GraphMutex.hpp  GraphSharedMutex.cpp  GraphSharedMutex.hpp  main.cpp
Testes/: ippd.odp  ippdResults.pptx  resultados4threadsAtomico.txt  resultados4threadsMutex  resultados4threadsShared  resultados8threadsAtomico.txt  resultados8threadsMutex  resultados8threadsShared
